Add handler to downalod world_wav
