# server/docs/swagger.json
@@ -312,6 +312,35 @@
                     }
                 }
             }
+        },
+        "/proc/{id}/world_wav": {
+            "get": {
+                "description": "download world wav file generated by pneutrinoutil",
+                "summary": "download world wav",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "request id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
