# server/handler/get.go
@@ -164,3 +164,17 @@ func (g *Get) Wav(c echo.Context) error {
 		return c.File(filepath.Join(r.Dir(), r.Element().Basename+".wav"))
 	})(c)
 }
+
+// Download world wav file generated by pneutrinoutil.
+//
+// @summary download world wav
+// @description download world wav file generated by pneutrinoutil
+// @param id path string true "request id"
+// @success 200 {string} file
+// @failure 404 {object} handler.ErrorResponse
+// @router /proc/{id}/world_wav [get]
+func (g *Get) WorldWav(c echo.Context) error {
+	return g.withSuccessfulResult(func(c echo.Context, r pworker.Result) error {
+		return c.File(filepath.Join(r.Dir(), r.Element().Basename+"_world.wav"))
+	})(c)
+}
